syntax = "proto3";

package pb.ping.v1;

message PingRequest {
  string ping = 1;
}

message PingResponse {
  string pong = 1;
}

service PingService {
  rpc Ping(PingRequest) returns (PingResponse);
}
